# flatbuffers-c-wrapper

./: cflexwrapper.cpp  cflexwrapper.h  meson.build
